make.log
g++ -c -pipe -O2 -std=gnu++1z -Wall -Wextra -fPIC -D_REENTRANT -DQT_NO_DEBUG -DQT_PRINTSUPPORT_LIB -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -I. -I/usr/include/eigen3 -I/usr/include/x86_64-linux-gnu/qt6 -I/usr/include/x86_64-linux-gnu/qt6/QtPrintSupport -I/usr/include/x86_64-linux-gnu/qt6/QtWidgets -I/usr/include/x86_64-linux-gnu/qt6/QtGui -I/usr/include/x86_64-linux-gnu/qt6/QtNetwork -I/usr/include/x86_64-linux-gnu/qt6/QtCore -I. -I. -I/usr/lib/x86_64-linux-gnu/qt6/mkspecs/linux-g++ -o mainwindow.o mainwindow.cpp
mainwindow.cpp: In constructor ‘MainWindow::MainWindow(QWidget*)’:
mainwindow.cpp:40:46: error: ‘checkStateChanged’ is not a member of ‘QCheckBox’
   40 |     connect(ui->checkBoxCursorA, &QCheckBox::checkStateChanged, this, [this](int state){
      |                                              ^~~~~~~~~~~~~~~~~
mainwindow.cpp:44:46: error: ‘checkStateChanged’ is not a member of ‘QCheckBox’
   44 |     connect(ui->checkBoxCursorB, &QCheckBox::checkStateChanged, this, [this](int state){
      |                                              ^~~~~~~~~~~~~~~~~
make: *** [Makefile:473: mainwindow.o] Error 1
